# internal/api/generated/oas_validators_gen.go
@@ -617,6 +617,17 @@ func (s *AgentMessage) Validate() error {
 
 	var failures []validate.FieldError
 	if err := func() error {
+		if err := s.MessageId.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "messageId",
+			Error: err,
+		})
+	}
+	if err := func() error {
 		if err := s.Role.Validate(); err != nil {
 			return err
 		}
@@ -1602,17 +1613,40 @@ func (s MessageID) Validate() error {
 	if err := (validate.String{
 		MinLength:     1,
 		MinLengthSet:  true,
-		MaxLength:     255,
+		MaxLength:     256,
 		MaxLengthSet:  true,
 		Email:         false,
 		Hostname:      false,
-		Regex:         nil,
+		Regex:         regexMap["^[A-Za-z0-9][A-Za-z0-9._:/@-]*$"],
 		MinNumeric:    0,
 		MinNumericSet: false,
 		MaxNumeric:    0,
 		MaxNumericSet: false,
 	}).Validate(string(alias)); err != nil {
 		return errors.Wrap(err, "string")
+	}
+	return nil
+}
+
+func (s *MessageReceipt) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if err := s.MessageId.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "messageId",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
 	}
 	return nil
 }
@@ -2474,6 +2508,17 @@ func (s *SendMessageRequest) Validate() error {
 	}(); err != nil {
 		failures = append(failures, validate.FieldError{
 			Name:  "flowId",
+			Error: err,
+		})
+	}
+	if err := func() error {
+		if err := s.MessageId.Validate(); err != nil {
+			return err
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "messageId",
 			Error: err,
 		})
 	}
